# onlyswaps-solver

./: .env.example  .gitmodules  Cargo.toml  Dockerfile  README.md  build-dependencies.sh  config-default.json  config-local.json  config_default.json  request-swap.sh  rustfmt.toml
.github/actions/: build-and-test.yml
.github/actions/rust-test-action/: action.yml
.github/workflows/: push-docker.yml  rust-build-and-tests.yml
onlyswaps-docker/: .gitignore  README-COMPETITIVE-DEMO.md  build-chains.sh  configure-solver.sh  demo-competitive-swap.sh  docker-compose.yml  request-swap.sh  solver-config-template.json
onlyswaps-docker/onlyswaps-solidity/broadcast/ConfigureRouterScript.s.sol/43113/: run-1758646743628.json  run-1758647009423.json  run-1758652672421.json  run-1758746736817.json
onlyswaps-docker/onlyswaps-solidity/broadcast/DeployAllContracts.s.sol/43113/: run-1758646737560.json  run-1758647003224.json  run-1758746733659.json  run-latest.json
onlyswaps-solidity/: README.md
onlyswaps-solidity/broadcast/DeployAllContracts.s.sol/31338/: run-latest.json
onlyswaps-solidity/demo/: onlyswap-e2e-demo.ts
onlyswaps-solidity/demo/utilities/: anvil-helper.ts
onlyswaps-solidity/script/onlyswaps/json/: 31338.json
src/: api.rs  app.rs  chain.rs  config.rs  db.rs  drand.rs  drand_test.rs  eth.rs  events.rs  executor.rs  faucet.rs  handler.rs  main.rs  model.rs  network.rs  plugin.rs  provider.rs  solver.rs  util.rs
