[package]
name = "onlyswaps-solver"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.16", features = ["provider-ws"] }
axum = "0.8.4"
clap = { version = "4.5.40", features = ["derive", "env"] }
eyre = "0.6.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shellexpand = "3.1.1"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "signal"] }
