[package]
name = "onlyswaps-solver"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.16", features = ["provider-ws", "provider-anvil-node"] }
async-trait = "0.1.88"
axum = "0.8.4"
clap = { version = "4.5.40", features = ["derive", "env"] }
dotenv = "0.15.0"
eyre = "0.6.12"
futures = "0.3.31"
hex = "0.4"
itertools = "0.10.5"
moka = { version = "0.12.10", features = ["sync"] }
num-bigint = "0.4"
reqwest = { version = "0.11", features = ["json"] }
rug = "1.19"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
speculoos = "0.13.0"
shellexpand = "3.1.1"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "signal"] }
